proyecto2/k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qm2026-route
  namespace: qm2026
spec:
  parentRefs:
  - name: qm2026-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /grpc-201407049
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /predict
    backendRefs:
    - name: rust-api
      port: 8080
